# PipeScaler

./: .gitignore  .gitmodules  .pylintrc  .travis.yml  AGENTS.md  LICENSE  README.md  mypy.txt  prospector.json  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: build.yml  codeql-analysis.yml  linux.yml  macos.yml  reviewdog.yml  windows.yml
.run/: Test all windows.run.xml  Test gui.run.xml  Test macOS.run.xml  Test serial.run.xml  Test.run.xml  clear coverage.run.xml  coverage.run.xml
docs/: ARCHITECTURE.md  STYLE.md  TODO.md  conda_pipescaler.ps1  conda_pipescaler.sh  download_models.sh  mypy_reporter.py  prospector_reporter.py  pydocstyle_reporter.py  pytest_reporter.py  readme_updater.py  update_readme.py
lauhseuisin/: LauhSeuiSin.py  Pipeline.py  __init__.py  actors.yaml  conf_esrgan.yaml  conf_oot3d.yaml  conf_pixelmator.yaml  conf_test.yaml  conf_waifu.yaml  conf_waifu_pixelmator.yaml  interface.yaml  lods.yaml  lodsets.yaml  maps.yaml  mypy.ini  skip.yaml
lauhseuisin/filters/: ListFilter.py  RegexFilter.py  TextImageFilter.py  __init__.py
lauhseuisin/processors/: AutomatorProcessor.py  CopyFileProcessor.py  CopyProcessor.py  ESRGANProcessor.py  FlattenProcessor.py  ImageMagickProcessor.py  NeuralEnhanceProcessor.py  Pixelmator2xProcessor.py  PngquantProcessor.py  PotraceProcessor.py  PotraceShadowProcessor.py  Processor.py  ResizeProcessor.py  SideChannelProcessor.py  ThresholdProcessor.py  WaifuPixelmator2xTransparentProcessor.py  WaifuProcessor.py  XbrzProcessor.py  __init__.py
lauhseuisin/scripts/: copy_debug.py  copy_nolod.py  identify_lods.py
lauhseuisin/sorters/: LODSorter.py  ListSorter.py  MipmapSorter.py  RegexSorter.py  ResizeSorter.py  Sorter.py  TextImageSorter.py  TransparencySorter.py  __init__.py
lauhseuisin/sources/: CitraDumpSource.py  ScanDirectorySource.py  Source.py  TexModDumpSource.py  __init__.py
local/: style_notes.md
pipescaler/: PipeScalar.py  PipeScaler.py  Pipeline.py  __init__.py  file_scanner.py  mypy.ini
pipescaler/analytics/: __init__.py  image_hash_collection.py  image_pair_collection.py  image_pair_scorer.py
pipescaler/cl/: __init__.py  pipescaler_cl.py  process_cl.py  run_cl.py  utility_cl.py
pipescaler/cli/: __init__.py  pipescaler_cli.py  process_cli.py  processors_cli.py  run_cli.py  utilities_cli.py  utility_cli.py  utilize_cli.py
pipescaler/common/: .gitignore  LICENSE  README.md  __init__.py  cltool.py  command_line_interface.py  exceptions.py  general.py  misc.py  subprocess.py  testing.py  validation.py
pipescaler/core/: __init__.py  block.py  cltool.py  configurable_command_line_tool.py  enum.py  enums.py  exception.py  exceptions.py  external_processor.py  file.py  files.py  image.py  image_hash_collection.py  image_pair_collection.py  image_pair_scorer.py  image_pairs_collection.py  image_processor.py  merger.py  misc.py  pipe_image.py  pipeline.py  processor.py  pytorch_processor.py  runner.py  sort.py  sorter.py  sorting.py  source.py  splitter.py  stage.py  terminus.py  types.py  typing.py  utility.py  validation.py
pipescaler/image/: __init__.py  scaled_pair_identifier.py  subdivided_image.py  testing.py
pipescaler/mergers/: __init__.py  alpha_merger.py  color_match_merger.py  color_to_alpha_merger.py  histogram_match_merger.py  merger.py  normal_merger.py  palette_match_merger.py
pipescaler/models/: __init__.py  esrgan.py  waifu_upcon7.py  waifu_upconv7.py  waifu_vgg7.py
pipescaler/pipe/: __init__.py  checkpoint_manager.py  side_channel_processor.py  substituter.py
pipescaler/pipelines/: __init__.py  checkpoint_manager.py  pipe_video_image.py  pipeline.py  substituter.py
pipescaler/processors/: AutomatorProcessor.py  CopyFileProcessor.py  ESRGANProcessor.py  FlattenProcessor.py  NeuralEnhanceProcessor.py  Pixelmator2xProcessor.py  PngquantProcessor.py  PotraceProcessor.py  Processor.py  ResizeProcessor.py  SideChannelProcessor.py  ThresholdProcessor.py  WaifuPixelmator2xTransparentProcessor.py  WaifuProcessor.py  XbrzProcessor.py  __init__.py  apple_script_external_processor.py  apple_script_processor.py  automator_external_processor.py  automator_processor.py  copy_file_processor.py  copy_processor.py  crop_processor.py  esrgan_processor.py  expand_processor.py  flatten_processor.py  gigapixel_ai_proessor.py  height_to_normal_processor.py  mode_processor.py  pixelmator2x_processor.py  pngquant_external_processor.py  pngquant_processor.py  potrace_external_processor.py  potrace_processor.py  processor.py  resize_processor.py  side_channel_processor.py  solid_color_processor.py  texconv_external_processor.py  texconv_processor.py  (+6 more)
pipescaler/runners/: __init__.py  apple_script_runner.py  automator_runner.py  pngquant_runner.py  potrace_runner.py  texconv_runner.py  topaz_video_ai_runner.py  waifu_runner.py
pipescaler/scripts/: __init__.py  apng_creator.py  directory_watcher.py  file_scanner.py  file_watcher.py  pipe_runner.py  pipescaler.py  pipescaler_command_line_tool.py  pipescaler_host.py  process.py  process_command_line_tool.py  scaled_image_identifier.py  scaled_pair_identifier_command_line_tool.py
pipescaler/sorters/: ListSorter.py  MipmapSorter.py  RegexSorter.py  SizeSorter.py  Sorter.py  TransparencySorter.py  __init__.py  alpha_sorter.py  grayscale_sorter.py  list_sorter.py  mode_sorter.py  monochrome_sorter.py  regex_sorter.py  resize_sorter.py  scale_sorter.py  size_sorter.py  solid_color_sorter.py  sorter.py  transparency_sorter.py
pipescaler/sources/: CitraDumpSource.py  (+9 more)
scripts/: conda_pipescaler.ps1  conda_pipescaler.sh  download_models.sh  readme_updater.py
test/: .coveragerc  hashes.csv  pytest.ini  shared.py  tee_test.py  test.pth  test.py  test_alpha_merger.py  test_alpha_splitter.py  test_color_match_merger.py  test_core.py  test_gui_processors.py  test_mergers.py  test_normal_merger.py  test_normal_splitter.py  test_pipeline.py  test_processors.py  test_processors_cl.py  test_scaled_pair_identifier.py  test_scripts.py  test_sorters.py  test_sources.py  test_splitters.py  test_termini.py  test_web_processor.py
(+800 files in other folders)
