[project]
name = "pipescaler"
version = "0.1.0"
description = ""
authors = [
    { name = "Karl Debiec", email = "karl.t.debiec@gmail.com" }
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ImageHash>=4.3.2",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "Pillow>=12.1.0",
    "reportlab>=4.4.1",
    "rlpycairo>=0.3.0",
    "scikit-image>=0.25.2",
    "scipy>=1.15.3",
    "spandrel>=0.4.1",
    "svglib>=1.5.1",
    "torch>=2.10.0",
    "xbrz.py @ git+https://github.com/ioistired/xbrz.py",
]

[project.scripts]
pipescaler = "pipescaler.cli.pipescaler_cli:PipeScalerCli.main"

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.3.260113",
    "pyright>=1.1.401",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "pytest-xdist>=3.7.0",
    "ruff>=0.14.14",
    "ty>=0.0.13",
    "types-Pillow>=10.2.0.20240822",
]

[tool.coverage.run]
data_file='coverage.coverage'
concurrency='multiprocessing'
parallel='True'

[tool.pytest.ini_options]
log_cli=true
log_cli_level="WARNING"
markers=[
    'serial: test must be run serially',
    'gui: test covers GUI application']

[tool.ruff.lint]
select = [
    "D", # pydocstyle
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "N", # pep8-naming
    "NPY", # numpy-specific rules
    "PERF", # perflint
    "PL", # pylint
    "UP", # pyupgrade
    "W", # pycodestyle
]
ignore = [
    "D410", # Missing blank line after section
    "D411", # Missing blank line before section
    "N818", # Suffix "Error" should be used on exception names
    "PLR2004" # Magic value used in comparison
]

[tool.ruff.lint.pydocstyle]
convention = 'google'

[tool.setuptools]
packages = { find = { include = ["pipescaler*"] } }

[tool.uv]
package = true
